# onyx

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
playground/: README.md
playground/app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
playground/app/src/: App.svelte
playground/wasm/: Cargo.toml  README.md
playground/wasm/src/: lib.rs
src/: ast.rs  lib.rs  main.rs  parse_type.rs  typecheck.rs  types.rs
src/types/: mod.rs  parse.rs  parse_utils.rs
