[package]
name = "onyx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnix = { git = "https://github.com/nix-community/rnix-parser", rev="614e7d4641e83ab7eb321d9ac5e3d12985f9f3ba" }

rowan = "0.15.0"
