[package]
name = "onyx-wasm"
version = "0.1.0"
authors = ["Nicolas Mattia <nicolas@nmattia.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = "0.4.5"
onyx = { path = "../../" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
